--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,23 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- Для специалиста-->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- лаба Специалист -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.0.4.RELEASE</version>
+
+		</dependency>
+
 	</dependencies>
 
 	<build>
